--- a/SITE/index.html
+++ b/SITE/index.html
@@ -10,9 +10,9 @@
 
 	<div class="account">
 		<img src="user.png">
-		<a href="">Вход</a>
+		<a href="a\login.php">Вход</a>
 		<img src="new-user.png">
-		<a href="">Регистрация</a>
+		<a href="a\signup.php">Регистрация</a>
 	</div>
 
 	<div class="navbar">
